# autogkb-experiments

./: .gitignore  main.py  markdown_downloader.py  pyproject.toml
data/articles/: PMC10275785.md  PMC10399933.md  PMC10786722.md  PMC10880264.md  PMC10946077.md  PMC10993165.md  PMC11062152.md  PMC11430164.md  PMC11603346.md  PMC11971672.md  PMC12035587.md  PMC12036300.md  PMC12038368.md  PMC12319246.md  PMC12331468.md  PMC2859392.md  PMC3113609.md  PMC3387531.md  PMC3548984.md  PMC3584248.md  PMC3839910.md  PMC384715.md  PMC4706412.md  PMC4916189.md  PMC5508045.md  PMC554812.md  PMC5561238.md  PMC6435416.md  PMC6465603.md  PMC6714829.md  PMC8790808.md  PMC8973308.md
src/: eval_variants.py  variant_extractor.py
src/extractors/: example.py
