[project]
name = "autogkb-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openjarvis",
    "pubmed-markdown>=0.1.0",
]

[tool.uv.sources]
openjarvis = { git = "https://github.com/open-jarvis/OpenJarvis.git" }
